--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -55,19 +55,14 @@
                                                         <div class="row py-2">
                                                             <div class="compact-form">
                                                                     <div class="row gx-3">
-                                                                        <div class="col-12">
-                                                                            <div class="input-group mb-0" style="border-bottom: none;">
-                                                                                <input type="date" id="terInput" name="date_of_visit" value="" required>
-                                                                                <label for="terInput" style="top: 0%;">To Change:</label>
-                                                                            </div>
-                                                                        </div>
-                                                                        <div class="col-12 mt-0">
-                                                                            {% set field = getattr(history_gyn_form.entries[0], 'comments', None) %}
-                                                                            {% if field %}
-                                                                                {{ macros.input_group('comments', {'type': field.type, 'label': field.label.text}, "") }}
+                                                                        {% set fields = ['comments', 'date_of_visit'] %}
+                                                                        {% for name, field in history_gyn_form.entries[0].form._fields.items() %}
+                                                                            {% if field.type != 'HiddenField' and name in fields %}
+                                                                                <div class="col-12 mt-0">
+                                                                                    {{ macros.input_group(name, {'type': field.type, 'label': field.label.text}, '') }}
+                                                                                </div>
                                                                             {% endif %}
-                                                                        </div>
-
+                                                                        {% endfor %}
                                                                 </div>
                                                             </div>
                                                         </div>
