--- a/fetusapp/templates/patient_tabs/history_gyn.html
+++ b/fetusapp/templates/patient_tabs/history_gyn.html
@@ -1,6 +1,38 @@
 {% import 'macros.html' as macros %}
 <link rel="stylesheet" href="{{ url_for('static', filename='history_gyn.css') }}">
 
+<div class="modal fade" id="deleteGynHistoryModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header justify-content-center">
+                <h5 class="modal-title text-center">Επιβεβαίωση Διαγραφής</h5>
+            </div>
+            <div class="modal-body">
+                <p class="text-center">Είστε σίγουροι ότι θέλετε να διαγράψετε το ιστορικό γυναικολογικής επίσκεψης της {{ patient.first_name | proper_case }} {{ patient.last_name | proper_case }};</p>
+            </div>
+            <div class="modal-footer justify-content-center">
+                <form action="">
+                    <input id="deleteGynHistoryId" name="id" value="" type="hidden">
+                    <button type="button" class="btn btn-outline-light px-4" data-bs-dismiss="modal">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-x-square" viewBox="0 1 16 16">
+                            <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                        </svg>
+                        Ακύρωση
+                    </button>
+                    <button type="button" class="btn btn-danger px-4" onclick="confirmDeleteGynHistory(this)">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 1 16 16">
+                            <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47M8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5"/>
+                        </svg>
+                        Διαγραφή
+                    </button>
+                </form>
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <div>
     <h5>Επισκέψεις</h5>
     <div class="col-12">
@@ -240,6 +272,16 @@
 </div>
 
 <script>
+
+window.showDeleteGynHistoryModal = async function(btn) {
+    const form = btn.closest('form');
+    const gynHistoryId = form.querySelector('input[name="id"]').value;
+    console.log('gynHistoryId to delete:', gynHistoryId);
+    document.getElementById('deleteGynHistoryId').value = gynHistoryId;
+    const deleteModal = new bootstrap.Modal(document.getElementById('deleteGynHistoryModal'));
+    deleteModal.show();
+}
+
 window.saveChangesGynHistory = async function(btn) {
     try {
         const form = btn.closest('form');
