--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -357,7 +357,7 @@
                         <li class="nav-item" role="presentation">
                             <button class="nav-link" style="border-radius: 5rem;" id="pills-files-tab" data-tab-key="files" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Αρχεία</button>
                         </li>
-                        <li class="nav-item" role="presentation">
+                        <li class="nav-item" role="presentation" style="display: none;">
                             <button class="nav-link" style="border-radius: 5rem;" id="pills-tests-tab" data-tab-key="tests" data-bs-toggle="pill" data-bs-target="#pills-disabled" type="button" role="tab" aria-controls="pills-disabled" aria-selected="false">Εξετάσεις</button>
                         </li>
                 </ul>
